fix menu color on mobile

--- a/themes/KeepIt/assets/css/_common/_section/navbar.scss
+++ b/themes/KeepIt/assets/css/_common/_section/navbar.scss
@@ -19,7 +19,7 @@
       color: $light-background-color;
 
       .dark-theme &{
-        color: $dark-background-color;
+        color: $dark-green;
       }
   }
   
